deploy: f523990e3243893b3084aaeeb7acb93e72e916a3

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@ Denis Zygann
 <span aria-hidden=true class=navbar-burger__line></span>
 <span aria-hidden=true class=navbar-burger__line></span></a><nav class=nav><ul class=nav__list id=navMenu><li class=nav__list-item><a href=/about/ title>Home</a></li></ul><ul class="nav__list nav__list--end"><li class=nav__list-item><div class=themeswitch><a title="Switch Theme"><i class="fas fa-adjust fa-fw" aria-hidden=true></i></a></div></li></ul></nav></div></header><div class="post
 animated fadeInDown"><div class=post__content><p>My name is Denis Zygann. I’m a passionate Software Engineer from Flensburg. A city in the north of Germany.
-I love to develop software applications and to learn new technologies.
-This contains also all tools around the software lifecycle and the protection on different levels.</p><p>In 2014 I graduated my Bachelor of Science in computer science.
-Then I have started to work on a team of 8 people.
-We developed a software for technical writers, which is build up with Java and the Eclipse Rich Client Platform.
+I love to develop software applications and learn new technologies.
+I&rsquo;m also interested in all tools around the software lifecycle and the protection on different levels.</p><p>In 2014 I graduated with my Bachelor of Science in computer science.
+Then I started to work on a team of 8 people in a consulting company.
+We developed software for technical writers, which is built up with Java and the Eclipse Rich Client Platform.
 After two years I had the opportunity to change my position and I took the chance.
-I worked on Java EE and web technologies in connection to the SAP LO-VC for an international Danish company.</p><p>Since 2017 I’m working the SAP Commerce Cloud solution. I passed the developer training and became more familiar with the ecommerce platform.
-One of my first projects was to setup a Storefront in connection with the CPQ extension to configure products and support my customer to implement his business cases.</p><p>In 2019 have worked for a telecommunication provider as software engineer.
+I worked on Java EE and web technologies in connection to the SAP LO-VC for an international Danish company.</p><p>Since 2017 I’m working on the SAP Commerce Cloud solution. I passed the developer training and became more familiar with the e-commerce platform.
+One of my first projects was to build up a Storefront in connection with the CPQ extension to configure products and support my customer to implement his business cases.</p><p>Since 2019 I work for a telecommunication provider as a software engineer.
 Still SAP Commerce Cloud but with additional extensions like the configurablebundleservice to bundle digital and hardware products.</p><p>In the end, I love to create software that helps people to achieve their dreams.</p></div></div><div class=pagination></div></main></div><footer class="footer footer__base"><ul class=footer__list><li class=footer__item>&copy;
 Denis Zygann
 2022</li></ul></footer><script type=text/javascript src=/js/medium-zoom.min.602bd2014468bd348112e2aa24f595c530d257a4ed6c335d7baaa6ac9a7ca6fb.js integrity="sha256-YCvSAURovTSBEuKqJPWVxTDSV6TtbDNde6qmrJp8pvs=" crossorigin=anonymous></script></body></html>
